# soulcraft-claude

./: .gitignore  CLAUDE.dev.md  Makefile  README.md  pyproject.toml
.claude/agents/: critique.md
.claude/hooks/: lint-python.sh
.devcontainer/: devcontainer.json  setup.sh
docs/: RATIONALE.md
evals/human-sim/: prompt.md  soulcraft.yaml
evals/human-sim/behaviors/: human-realism.yaml
evals/test-ai/: .env  prompt.md  soulcraft.yaml  tools.yaml
evals/test-ai/behaviors/: proactivity.yaml
evals/test-ai/scenarios/: celebrating-win.yaml  grief-processing.yaml  scenario-1-production-incident-at-a.yaml  scenario-10-inheriting-a-messy-investment.yaml  scenario-2-supply-chain-crisis-for.yaml  scenario-3-qualifying-exam-preparation-with.yaml  scenario-4-cross-country-move-with-a.yaml  scenario-5-junior-consultant-building-a.yaml  scenario-6-homebrewer-exploring-a-taproom.yaml  scenario-7-nonprofit-executive-director-before.yaml  scenario-8-self-releasing-a-debut-album.yaml  scenario-9-immigration-attorney-managing-overlapping.yaml  terse-expert.yaml  thinking-aloud.yaml
prompts/: evaluator.md  scenario-context.md  target-response.md
scripts/: soulcraft-dev
soulcraft-claude/: CLAUDE.md
soulcraft-claude/.claude/: settings.json
soulcraft-claude/.claude/hooks/: anti-delegation.sh  (+1 more)
src/soulcraft/: bloom.py  cli.py  config.py  results.py
tests/: test_bloom_config.py  test_cli.py  test_config.py  test_results.py  test_results_dir.py
tui/: package-lock.json  package.json  tsconfig.json  ttyd-theme.css
tui/src/: App.tsx  index.tsx  theme.ts
(+48 files in other folders)
